[project]
name = "robomcp"
version = "0.1.0"
description = "Minimal MCP server wrapping python-roborock to query and control a Roborock vacuum."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David Vielhuber", email = "david@vielhuber.de" }]
dependencies = [
    "mcp>=1.0.0",
    "python-roborock>=5.10.0",
]

[project.scripts]
robomcp = "robomcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robomcp"]
